RESOLVED FIXED220152
Missing header gtk/gtk.h in PointerLockManagerX11.cpp
https://bugs.webkit.org/show_bug.cgi?id=220152
Summary Missing header gtk/gtk.h in PointerLockManagerX11.cpp
Dave Blanchard
Reported 2020-12-26 08:45:12 PST
Created attachment 416784 [details] Add missing gtk/gtk.h include to PointerLockManagerX11.cpp In certain configurations, with GTK3, WebKitGTK fails to compile due to header gtk/gtk.h not being included in ./Source/WebKit/UIProcess/gtk/PointerLockManagerX11.cpp. I think disabling OpenGL was the trigger, but don't recall exactly. See attached patch.
Attachments
Add missing gtk/gtk.h include to PointerLockManagerX11.cpp (302 bytes, patch)
2020-12-26 08:45 PST, Dave Blanchard
no flags
Carlos Garcia Campos
Comment 1 2021-01-21 04:34:08 PST
Note You need to log in before you can comment on or make changes to this bug.