Missing header gtk/gtk.h in PointerLockManagerX11.cpp https://bugs.webkit.org/show_bug.cgi?id=220152

Patch by Dave Blanchard <dave@grow.game> on 2021-01-21
Reviewed by Carlos Garcia Campos.

* UIProcess/gtk/PointerLockManagerX11.cpp:

Canonical link: https://commits.webkit.org/233198@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271689 268f45cc-cd09-0410-ab3c-d52691b4dbfc