Source/WebKit/UIProcess/gtk/PointerLockManagerX11.cpp
@@ -30,6 +30,7 @@
 
 #include "WebPageProxy.h"
 #include <X11/Xlib.h>
+#include <gtk/gtk.h>
 
 #if USE(GTK4)
 #include <gdk/x11/gdkx.h>
